# cBottle

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  launch_worker.sh  pyproject.toml  restart_nginx.sh  run_nginx.sh
ci/: setup_rclone.py
client/: cbottle_client.py  pyproject.toml  test_client.py
docs/: tutorials.md
examples/: tc_guidance_inference.py
scripts/: distill_multidiffusion.py  inference_coarse.py  inference_coarse_correlated.py  inference_coarse_video.py  inference_multidiffusion.py  inference_video_rollout.py  server_with_proxy.sh  setup_load_balancer.sh  train_coarse.py  train_multidiffusion_video.py  xarray_server.py
scripts/consul-template/: config.hcl
scripts/era5_data_prep/: README.md  config.py  create_index.py  enqueue_curate.py  enqueue_regrid_jobs.py  monitor.py  purge_tasks.py  requirements.txt  run_worker.sh  submit_worker.sh  tasks.py  test_curate.py
scripts/nersc/: interactive.sh  launch_server.sh  submit_sr_video_training.sh
scripts/nginx/: xarray.conf.template
src/cbottle/: _distill_helper.py  autoregression.py  checkpointing.py  correlated_latents_generator.py  diagnostics.py  diffusion_samplers.py  distill_helper.py  distributed.py  healpix_utils.py  inference.py  likelihood.py  loss.py  moe_utils.py  netcdf_writer.py  patchify.py  signals.py  storage.py  video_rollout.py
tests/integration/: test_dataset.py  test_train_multidiffusion.py
tests/scripts/: train_dkrz.py
tests/unit/: test_correlated_latents_generator.py  test_distributed.py  test_inference.py  test_loss.py  test_networks.py  test_round_robin_loader.py  (+4 more)
(+24 files in other folders)
